все файлы сасс потерпели изменение в видео перемены всех пикселей на рем

--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,6 +1,6 @@
 .container
     width: 100%
-    max-width: 1140px
+    max-width: 71.25rem
     margin: auto
 
 .row
@@ -8,9 +8,9 @@
     align-items: flex-start
     justify-content: space-between
     &-mini
-        padding-top: 66px
-        padding-bottom: 140px
-        border-bottom: 1px solid #eaf1f7
+        padding-top: 4.125rem
+        padding-bottom: 8.75rem
+        border-bottom: 0.0625rem solid #eaf1f7
    
 .col
     &-29
