--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -10,8 +10,8 @@ a
     font-family: 'Roboto'
     text-transform: uppercase
     font-weight: bold
-    font-size: 16px
-    border-radius: 5px
+    font-size: 1rem
+    border-radius: 0.3125rem
     transition: .3s
     &:hover
         transform: scale(1.2)
@@ -19,13 +19,13 @@ a
         background-color: rgba(8, 66, 183, 1)
         color: white
         border: none
-        padding: 17px 45px
+        padding: 1.0625rem 2.8125rem
         box-shadow: 
     &__secondary
         background-color: transparent
         color: rgba(8, 66, 183, 1)
-        border: 1px solid rgba(8, 66, 183, 1)
-        padding: 16px 39px
+        border: 0.0625rem solid rgba(8, 66, 183, 1)
+        padding: 1rem 2.4375rem
 .txt
     margin: 0
     color: $dark
@@ -36,16 +36,16 @@ a
     &--bold
         font-weight: bold
     &-percent
-        font-size: 112px
+        font-size: 7rem
         font-weight: normal
             
 .strong
     &__title
 
-        font-size: 35px
-        padding: 19px
+        font-size: 2.1875rem
+        padding: 1.1875rem
         background-color: white
 .invalid-block
-    // text-shadow: 1px 1px 2px black, 0 0 1em white
+    // text-shadow: 0.0625rem 0.0625rem 0.125rem black, 0 0 1em white
     color: white
    
