--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,10 +1,10 @@
 *, *:before, *:after
     box-sizing: border-box
 html
-    font-size: 16px 
-    font-weight: 300px
+    font-size: 1rem 
+    font-weight: 18.75rem
 body
     font-family: 'Futura Book', sans-serif
-    font-size: 1rem
+    font-size: 16px
 img
     max-width: 100% 
