--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -1,21 +1,21 @@
 .footer
-    padding-top: 114px
-    padding-bottom: 118px
+    padding-top: 7.125rem
+    padding-bottom: 7.375rem
     &__row
         display: flex
         justify-content: space-between
         align-items: center
     &__input__email
-        max-width: 264px
+        max-width: 16.5rem
         width: 100%
-        border: 1px solid rgba(207, 222, 238, 1)
-        border-radius: 2px
-        background: url('../img/svg/envelope.svg') no-repeat right 16px center
-        padding-top: 17px
-        padding-bottom: 17px
-        padding-left: 19px
+        border: 0.0625rem solid rgba(207, 222, 238, 1)
+        border-radius: 0.125rem
+        background: url('../img/svg/envelope.svg') no-repeat right 1rem center
+        padding-top: 1.0625rem
+        padding-bottom: 1.0625rem
+        padding-left: 1.1875rem
     &__description
-        max-width: 130px
+        max-width: 8.125rem
         width: 100%
         line-height: 1.50
     &__column
@@ -23,55 +23,55 @@
         flex-direction: column
         
         &:nth-child(2)  
-            border-top: 1px solid rgba(234, 241, 247, 1)
-            margin-top: -30px
-            padding-top: 48px
+            border-top: 0.0625rem solid rgba(234, 241, 247, 1)
+            margin-top: -1.875rem
+            padding-top: 3rem
         &:nth-child(3)  
-            border-top: 1px solid rgba(234, 241, 247, 1)
-            margin-top: -54px
-            padding-top: 48px
+            border-top: 0.0625rem solid rgba(234, 241, 247, 1)
+            margin-top: -3.375rem
+            padding-top: 3rem
             
         &__wider
-            padding-right: 54px
+            padding-right: 3.375rem
         &__links
-            max-width: 265px
+            max-width: 16.5625rem
             width: 100%
             display: flex
             flex-direction: row
             justify-content: space-between
     &__link
         color: #777777
-        margin-bottom: 10px
+        margin-bottom: 0.625rem
         &:last-child
             margin-bottom: 0
     &__link__logo
         &__fb
             
-            padding: 20px 20px
+            padding: 1.25rem 1.25rem
             background: url('../img/svg/facebook.svg') center no-repeat
-            border: 1px solid rgba(8, 66, 183, 1)
-            border-radius: 20px
+            border: 0.0625rem solid rgba(8, 66, 183, 1)
+            border-radius: 1.25rem
         &__vk
             
-            padding: 20px 20px
+            padding: 1.25rem 1.25rem
             background: url('../img/svg/vk.svg') center no-repeat
-            border: 1px solid rgba(8, 66, 183, 1)
-            border-radius: 20px
+            border: 0.0625rem solid rgba(8, 66, 183, 1)
+            border-radius: 1.25rem
         &__yt
             
-            padding: 20px 20px
+            padding: 1.25rem 1.25rem
             background: url('../img/svg/youtube.svg') center no-repeat
-            border: 1px solid rgba(8, 66, 183, 1)
-            border-radius: 20px
+            border: 0.0625rem solid rgba(8, 66, 183, 1)
+            border-radius: 1.25rem
         &__ig
             
-            padding: 20px 20px
+            padding: 1.25rem 1.25rem
             background: url('../img/svg/instagram.svg') center no-repeat
-            border: 1px solid rgba(8, 66, 183, 1)
-            border-radius: 20px
+            border: 0.0625rem solid rgba(8, 66, 183, 1)
+            border-radius: 1.25rem
         &__tt
             
-            padding: 20px 20px
+            padding: 1.25rem 1.25rem
             background: url('../img/svg/totop.svg') center no-repeat
-            border: 1px solid rgba(8, 66, 183, 1)
-            border-radius: 20px
+            border: 0.0625rem solid rgba(8, 66, 183, 1)
+            border-radius: 1.25rem
