--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -4,8 +4,8 @@
     top: 0
     width: 100%
     z-index: 99
-    padding-bottom: 20px
-    padding-top: 30px
+    padding-bottom: 1.25rem
+    padding-top: 1.875rem
     background-color: white
 
 .menu
@@ -18,35 +18,35 @@
     font-family: 'Roboto'
     text-transform: uppercase
     font-weight: bold
-    font-size: 16px
+    font-size: 1rem
     align-items: center 
     color: $dark
     &__img
-        margin-right: 12px
-        width: 25px
-        height: 27px
+        margin-right: 0.75rem
+        width: 1.5625rem
+        height: 1.6875rem
 .nav
     &-item
         font-family: 'Roboto'
         text-transform: uppercase
         font-weight: bold
-        font-size: 14px
+        font-size: 0.875rem
         color: #777777
-        padding-bottom: 34px
+        padding-bottom: 2.125rem
         &:first-child
-            margin-right: 71px
+            margin-right: 4.4375rem
         &:last-child
-            margin-left: 93px
+            margin-left: 5.8125rem
         &:hover    
             text-decoration: none
             color: $dark
-            border-bottom: 3px solid rgba(0, 86, 207, 1)
+            border-bottom: 0.1875rem solid rgba(0, 86, 207, 1)
 
 .phone
     font-family: 'Roboto'
     text-transform: uppercase
     font-weight: nornal
-    font-size: 16px
+    font-size: 1rem
     align-items: center 
     color: #777777
     &__bold
