--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,37 +1,37 @@
 .hero
-    padding-top: 230px
-    padding-bottom: 605px
-    background: url('../img/webp/bg.webp') -185px 0 no-repeat 
+    padding-top: 14.375rem
+    padding-bottom: 37.8125rem
+    background: url('../img/webp/bg.webp') -11.5625rem 0 no-repeat 
     &__title
         margin: 0
-        margin-bottom: 8px
-        font-size: 70px
+        margin-bottom: 0.5rem
+        font-size: 4.375rem
         align-items: center 
         color: $dark
         &-mini
             margin: 0
             font-family: 'Roboto'
             font-weight: normal
-            font-size: 35px
+            font-size: 2.1875rem
             align-items: center 
             color: $dark
     &__text
-        max-width: 349px
+        max-width: 21.8125rem
         width: 100%
         margin: 0
-        margin-top: 29px
-        margin-bottom: 65px
-        font-size: 16px
+        margin-top: 1.8125rem
+        margin-bottom: 4.0625rem
+        font-size: 1rem
     &__buttonsandtxt
         display: flex
         &__button
             &:first-child
-                margin-bottom: 12px
+                margin-bottom: 0.75rem
         &__txt
-            margin-left: 53px
-            max-width: 350px
+            margin-left: 3.3125rem
+            max-width: 21.875rem
             width: 100%
-            font-size: 25px
+            font-size: 1.5625rem
     &__buttons
         display: flex
         flex-direction: column
