--- a/sass/templates/_info.sass
+++ b/sass/templates/_info.sass
@@ -1,49 +1,49 @@
 .info
-    margin-top: -328px
+    margin-top: -20.5rem
     
     &_div
-        padding-bottom: 116px
-        border-bottom: 1px solid #eaf1f7
+        padding-bottom: 7.25rem
+        border-bottom: 0.0625rem solid #eaf1f7
     &__percent
         font-weight: 100
-        font-size: 300px
+        font-size: 18.75rem
         margin: 0
         color: $dark
-        margin-top: 50px
+        margin-top: 3.125rem
         &-title
             color: $dark
             font-weight: bold
-            font-size: 24px
-            max-width: 270px
+            font-size: 1.5rem
+            max-width: 16.875rem
             width: 100%
             margin: 0
-            margin-top: 10px
+            margin-top: 0.625rem
             &-25
         &-txt
-            max-width: 212px
+            max-width: 13.25rem
             width: 100%
-            margin-top: 31px
+            margin-top: 1.9375rem
             line-height: 1.2
             &-25
-                margin-top: 31px
+                margin-top: 1.9375rem
                 line-height: 1.2
     &__title
         &-25
-            max-width: 189px
+            max-width: 11.8125rem
             width: 100%
             margin: 0
-            margin-top: 74px
-            font-size: 24px
+            margin-top: 4.625rem
+            font-size: 1.5rem
 
     &__txt
         &-25
-            margin-top: 30px
+            margin-top: 1.875rem
             line-height: 1.2
 .magnifier
-    margin-top: 265px
-    margin-right: 26px
+    margin-top: 16.5625rem
+    margin-right: 1.625rem
 .gear
-    margin-top: 248px
+    margin-top: 15.5rem
 
 
             
