--- a/sass/templates/_learn.sass
+++ b/sass/templates/_learn.sass
@@ -1,6 +1,6 @@
 .learn
-    padding-top: 127px
-    padding-bottom: 119px
+    padding-top: 7.9375rem
+    padding-bottom: 7.4375rem
     background: url('../img/webp/bg_learn.webp') center 
     display: flex
     flex-direction: column
@@ -9,15 +9,15 @@
     &__title
         text-align: center
         margin: 0
-        max-width: 421px
+        max-width: 26.3125rem
         width: 100%
-        font-size: 23px
+        font-size: 1.4375rem
         line-height: 1.2
         font-weight: bold
         color: white
     &__button
-        margin-top: 35px
-        border: 1px solid white
+        margin-top: 2.1875rem
+        border: 0.0625rem solid white
         color: white
     
         
