--- a/sass/templates/_lessons.sass
+++ b/sass/templates/_lessons.sass
@@ -6,95 +6,95 @@
         background-repeat: no-repeat
         background-position: left bottom
     &__title
-        margin-top: 111px
-        font-size: 36px
+        margin-top: 6.9375rem
+        font-size: 2.25rem
         color: $light
     &__buttons
-        margin-top: 106px
+        margin-top: 6.625rem
         display: flex
         justify-content: center
-        margin-bottom: 120px
+        margin-bottom: 7.5rem
     &__button
-        padding: 16px 52px
+        padding: 1rem 3.25rem
         &__sec
             color: #fff
-            border: 1px solid #fff
-            margin-right: 30px
+            border: 0.0625rem solid #fff
+            margin-right: 1.875rem
 .study
     &__txt
         color: #68799a
-        max-width: 411px
+        max-width: 25.6875rem
         width: 100%
-        margin-left: 22px
-        font-size: 16px
+        margin-left: 1.375rem
+        font-size: 1rem
 
     &__ol
-        padding-inline-start: 22px
-        padding-inline-end: 16px
+        padding-inline-start: 1.375rem
+        padding-inline-end: 1rem
     &__li
         color: $light
-        max-width: 393px
+        max-width: 24.5625rem
         width: 100%
-        font-size: 23px
+        font-size: 1.4375rem
         font-weight: normal
-        margin-bottom: 25px
+        margin-bottom: 1.5625rem
         &:last-child
-            margin-bottom: 55px
+            margin-bottom: 3.4375rem
         &::marker
-            font-size: 16px
+            font-size: 1rem
             color: #68799A
     &__title
         color: $light
-        margin-top: 74px
-        margin-bottom: 37px
-        font-size: 30px
+        margin-top: 4.625rem
+        margin-bottom: 2.3125rem
+        font-size: 1.875rem
 .homework
-    padding-bottom: 54px
-    border-bottom: 1px solid #26556c
+    padding-bottom: 3.375rem
+    border-bottom: 0.0625rem solid #26556c
     &__txt
         color: $light
     &__ol
-        padding-inline-start: 22px
-        padding-inline-end: 16px
+        padding-inline-start: 1.375rem
+        padding-inline-end: 1rem
     &__li
         color: $light
-        font-size: 19px
-        line-height: 24px
+        font-size: 1.1875rem
+        line-height: 1.5rem
         &::marker
-            font-size: 16px
+            font-size: 1rem
             color: #68799A
     &__title
         color: $light
-        margin-top: 74px
-        margin-bottom: 37px
-        font-size: 30px
+        margin-top: 4.625rem
+        margin-bottom: 2.3125rem
+        font-size: 1.875rem
 .giftwithtxt
     display: flex
     vertical-align: center
-    margin-top: 28px
+    margin-top: 1.75rem
 .gift
-    padding-top: 79px
+    padding-top: 4.9375rem
     &__img
         position: relative
     &__txt
-        max-width: 372px
+        max-width: 23.25rem
         width: 100%
-        font-size: 18px
-        line-height: 24px
+        font-size: 1.125rem
+        line-height: 1.5rem
         font-weight: 300
         color: #68799a
-        margin-left: 30px
+        margin-left: 1.875rem
     &__title
         color: $light
-        font-size: 30px
+        font-size: 1.875rem
         font-weight: bold
 .swipe
     &-first
-        top: 783px
+        top: 48.9375rem
         left: 0
         background: url('../img/webp/arro.webp') no-repeat
-        width: 52px
-        height: 16px
+        width: 3.25rem
+        height: 1rem
         opacity: 0.3
         -webkit-transform: rotate(deg)
         -moz-transform: rotate(180deg)
@@ -104,10 +104,10 @@
         &:hover
             opacity: 1
     &-second
-        top: 783px
-        left: 1088px
-        width: 52px
-        height: 16px
+        top: 48.9375rem
+        left: 68rem
+        width: 3.25rem
+        height: 1rem
         background: url('../img/webp/arro.webp') no-repeat
         opacity: 0.3
         &:hover
