--- a/sass/templates/_process.sass
+++ b/sass/templates/_process.sass
@@ -1,26 +1,26 @@
 .process
     background: url('../img/webp/process_bg.webp') center bottom  repeat-x
-    padding-top: 112px
-    padding-bottom: 116px
+    padding-top: 7rem
+    padding-bottom: 7.25rem
     &__title
-        font-size: 36px
-        margin-bottom: 111px
-        max-width: 463px
+        font-size: 2.25rem
+        margin-bottom: 6.9375rem
+        max-width: 28.9375rem
         width: 100%
     &-card
         &__title
-            margin-top: 43px
-            margin-bottom: 31px
-            font-size: 20px
+            margin-top: 2.6875rem
+            margin-bottom: 1.9375rem
+            font-size: 1.25rem
         &__txt
-            font-size: 16px
-            max-width: 160px
+            font-size: 1rem
+            max-width: 10rem
             width: 100%
         &__strong
-            font-size: 36px
+            font-size: 2.25rem
 .week
-    max-width: 132px
+    max-width: 8.25rem
     width: 100%
 .month
-    max-width: 166px
+    max-width: 10.375rem
     width: 100%
