--- a/sass/templates/_stages.sass
+++ b/sass/templates/_stages.sass
@@ -6,34 +6,34 @@
         justify-content: center
     &__title
         margin: 0
-        margin-top: 45px
-        margin-bottom: 29px
-        font-size: 36px
+        margin-top: 2.8125rem
+        margin-bottom: 1.8125rem
+        font-size: 2.25rem
     &__txt
         margin: 0
-        font-size: 24px
-        margin-top: 31px
-        margin-bottom: 19px
+        font-size: 1.5rem
+        margin-top: 1.9375rem
+        margin-bottom: 1.1875rem
         &-last
-            margin-bottom: 89px
+            margin-bottom: 5.5625rem
         &-big
             text-align: center
-            max-width: 348px
+            max-width: 21.75rem
             width: 100%
-            font-size: 16px
-            margin-bottom: 21px
+            font-size: 1rem
+            margin-bottom: 1.3125rem
     &__video
         position: relative
         display: flex
-        width: 945px
-        height: 387px
+        width: 59.0625rem
+        height: 24.1875rem
         background: url('../img/webp/woman_bg.webp') center no-repeat
     &__img
         position: relative
         margin: auto
 .rectangle
-    width: 2px
-    height: 47px
+    width: 0.125rem
+    height: 2.9375rem
     background: #eaf1f7
 .real
     &__div
@@ -41,20 +41,20 @@
         flex-direction: column
         align-items: center
         justify-content: center
-        padding-bottom: 120px
-        border-bottom: 1px solid #eaf1f7
+        padding-bottom: 7.5rem
+        border-bottom: 0.0625rem solid #eaf1f7
     &__title
         margin: 0
-        margin-top: 77px
-        font-size: 24px
+        margin-top: 4.8125rem
+        font-size: 1.5rem
         text-align: center
     &__txt
         margin: 0
-        margin-top: 30px
-        margin-bottom: 45px
-        max-width: 563px
+        margin-top: 1.875rem
+        margin-bottom: 2.8125rem
+        max-width: 35.1875rem
         width: 100%
-        font-size: 16px
+        font-size: 1rem
         text-align: center
     &__button
 
