--- a/sass/templates/_training.sass
+++ b/sass/templates/_training.sass
@@ -1,56 +1,56 @@
 .training
-    padding-top: 117px
+    padding-top: 7.3125rem
     &__title
-        padding-bottom: 64px
-        font-size: 36px
+        padding-bottom: 4rem
+        font-size: 2.25rem
         text-align: center
     &__card
-        max-width: 555px
+        max-width: 34.6875rem
         width: 100%
-        padding-left: 47px
-        padding-top: 182px
-        padding-bottom: 43px
+        padding-left: 2.9375rem
+        padding-top: 11.375rem
+        padding-bottom: 2.6875rem
         &-mini
             // &-cloud
-            //     margin-top: 8px
+            //     margin-top: 0.5rem
         &-graph
             background: url('../img/webp/graph_bg.webp') center no-repeat
         &-men
             background: url('../img/webp/men_bg.webp') center no-repeat
         &-title
-            margin-bottom: 31px
-            max-width: 184px
+            margin-bottom: 1.9375rem
+            max-width: 11.5rem
             width: 100%
             color: white
-            font-size: 25px
+            font-size: 1.5625rem
             &-mini
-                margin-top: 47px
-                margin-bottom: 32px
-                font-size: 24px
+                margin-top: 2.9375rem
+                margin-bottom: 2rem
+                font-size: 1.5rem
         &-txt
             color: white
-            max-width: 193px
+            max-width: 12.0625rem
             width: 100%
             &-last
-                max-width: 273px
+                max-width: 17.0625rem
                 width: 100%
             &-mini
-                font-size: 16px
+                font-size: 1rem
 
                 &-star
-                    max-width: 199px
+                    max-width: 12.4375rem
                     width: 100%
                 &-check
-                    max-width: 249px
+                    max-width: 15.5625rem
                     width: 100%
                 &-cloud
-                    max-width: 251px
+                    max-width: 15.6875rem
                     width: 100%
                 &-headphones
-                    max-width: 259px
+                    max-width: 16.1875rem
                     width: 100%
 
 .cloud
-    padding-top: 8px
+    padding-top: 0.5rem
 .headphones
-    padding-top: 10px
+    padding-top: 0.625rem
