--- a/sass/templates/_adventages.sass
+++ b/sass/templates/_adventages.sass
@@ -1,17 +1,17 @@
 .advantages
     background: #eaf1f7
-    padding-top: 117px
-    padding-bottom: 117px
+    padding-top: 7.3125rem
+    padding-bottom: 7.3125rem
     &__title
-        font-size: 36px
+        font-size: 2.25rem
         text-align: center
     &__row
         &-title
             text-align: center
-            margin-top: 63px
-            margin-bottom: 30px
-            line-height: 24px
-            font-size: 24px
+            margin-top: 3.9375rem
+            margin-bottom: 1.875rem
+            line-height: 1.5rem
+            font-size: 1.5rem
         &-col
             display: flex
             flex-direction: column
@@ -19,11 +19,11 @@
             justify-content: center
             &-txt
                 text-align: center
-                line-height: 24px
+                line-height: 1.5rem
             &-img
-                margin-bottom: 26px
+                margin-bottom: 1.625rem
 // .diamond
-//     padding-top: 12px
+//     padding-top: 0.75rem
 .col-inside
     display: flex
     justify-content: space-between
