--- a/sass/templates/_cashback.sass
+++ b/sass/templates/_cashback.sass
@@ -1,19 +1,19 @@
 .cashback
     background: #EAF1F7
     background-image: url('../img/webp/roboheadcashback.webp')
-    padding-top: 128px
-    padding-bottom: 119px
+    padding-top: 8rem
+    padding-bottom: 7.4375rem
     &__info
         display: flex
         align-items: center
         flex-direction: column
     &__headlight
-        max-width: 284px
+        max-width: 17.75rem
         width: 100%
         margin: auto
         text-align: center
-        margin-bottom: 29px
+        margin-bottom: 1.8125rem
         font-weight: bold
-        font-size: 24px
+        font-size: 1.5rem
 
         
