--- a/sass/templates/_free-lessons.sass
+++ b/sass/templates/_free-lessons.sass
@@ -3,52 +3,52 @@
     background: url('../img/webp/transparenthands.webp')  center
     align-items: center
     text-align: center
-    padding-top: 128px
-    padding-bottom: 122px
+    padding-top: 8rem
+    padding-bottom: 7.625rem
     &__container
         display: flex
         flex-direction: column
         align-items: center
         text-align: center
     &__headlight
-        font-size: 24px
+        font-size: 1.5rem
         color: #fff
-        margin-bottom: 26px
+        margin-bottom: 1.625rem
         font-weight: bold
-        max-width: 415px
+        max-width: 25.9375rem
         width: 100%
     &__description
         color: #fff
-        max-width: 393px
+        max-width: 24.5625rem
         width: 100%
         margin: auto
-        margin-bottom: 45px
+        margin-bottom: 2.8125rem
     &__form__container
-        max-width: 395px
+        max-width: 24.6875rem
         width: 100%
         display: flex
         flex-direction: column
         align-items: center
 
     &__input
-        max-width: 359px
+        max-width: 22.4375rem
         width: 100%
-        padding-top: 15px
-        padding-left: 17px
-        padding-bottom: 15px
+        padding-top: 0.9375rem
+        padding-left: 1.0625rem
+        padding-bottom: 0.9375rem
         outline: none
         border: none
-        border-radius: 5px
-        margin-bottom: 24px
+        border-radius: 0.3125rem
+        margin-bottom: 1.5rem
         color: black
         &:last-child
             margin-bottom: 0
         &-inside
-            max-width: 359px
+            max-width: 22.4375rem
             width: 100%
-            margin-bottom: 24px
+            margin-bottom: 1.5rem
         &__button
-            padding-left: 104px
-            padding-right: 104px
+            padding-left: 6.5rem
+            padding-right: 6.5rem
 
     
