--- a/sass/templates/_make.sass
+++ b/sass/templates/_make.sass
@@ -1,79 +1,79 @@
 .make
     background: url('../img/webp/wave.webp')no-repeat bottom center
-    margin-top: 111px
-    padding-bottom: 120px
+    margin-top: 6.9375rem
+    padding-bottom: 7.5rem
     .col__title
-        margin-right: 135px
+        margin-right: 8.4375rem
     &__title
         margin: auto
         text-align: center
-        max-width: 500px
+        max-width: 31.25rem
         width: 100%
         color: #0F1C2E
-        margin-bottom: 64px
+        margin-bottom: 4rem
         &__heading
-            font-size: 33px
+            font-size: 2.0625rem
             line-height: 1.30
-            margin-bottom: 24px
+            margin-bottom: 1.5rem
         &__discription
             line-height: 1.30
             margin: auto
-            max-width: 370px
+            max-width: 23.125rem
             width: 100%
-            font-size: 16px
+            font-size: 1rem
     &__calc
         &__container
             display: flex 
             &__titles
                 
-                max-width: 255px
+                max-width: 15.9375rem
                 width: 100%  
-                font-size: 19px
+                font-size: 1.1875rem
                 line-height: 1.30
             &__heading
                 font-weight: normal
                 margin: 0
         &-data
-            max-width: 328px
+            max-width: 20.5rem
             width: 100%
             display: flex
             align-items: center
-            padding-bottom: 2.5rem
-            margin-bottom: 2.5rem
-            border-bottom: 1px solid rgba(234, 241, 247, 1)
+            padding-bottom: 40px
+            margin-bottom: 40px
+            border-bottom: 0.0625rem solid rgba(234, 241, 247, 1)
             &__text
-                font-size: 16px
+                font-size: 1rem
                 font-weight: lighter
                 line-height: 1.30
 
             &__smaller
-                padding-left: 62px
-                max-width: 337px
+                padding-left: 3.875rem
+                max-width: 21.0625rem
                 width: 100%
             &:last-of-type
                 margin-bottom: 0
             &__input
-                width: 98px
-                height: 48px
-                text-indent: 20px
-                border: 1px solid rgba(207, 222, 238, 1)
-                border-radius: 5px
-                margin-right: 2.3571rem
+                width: 6.125rem
+                height: 3rem
+                text-indent: 1.25rem
+                border: 0.0625rem solid rgba(207, 222, 238, 1)
+                border-radius: 0.3125rem
+                margin-right: 37.7136px
     .no-border
         border: none
     &-button__container
         display: flex
         justify-content: center
-        margin-top: 32px
+        margin-top: 2rem
         
     &__button
-        padding: 18px 27px 15px
+        padding: 1.125rem 1.6875rem 0.9375rem
         text-decoration: none
         text-transform: uppercase
         font-weight: bold
-        font-size: 17px
+        font-size: 1.0625rem
         border: none
-        border-radius: 5px
+        border-radius: 0.3125rem
         cursor: pointer
         background-color: $darkerBlue
         color: $light
