--- a/sass/templates/_phone.sass
+++ b/sass/templates/_phone.sass
@@ -1,15 +1,15 @@
 .profit
     background: url('../img/webp/phone.webp') center 
-    padding-top: 123px
-    padding-bottom: 130px
+    padding-top: 7.6875rem
+    padding-bottom: 8.125rem
     &__title
-        font-size: 35px
+        font-size: 2.1875rem
         margin: 0
-        max-width: 462px
+        max-width: 28.875rem
         width: 100%
         text-align: center
         margin: auto
-        margin-bottom: 296px
+        margin-bottom: 18.5rem
     &__slider
         &-inside
             display: flex
@@ -17,19 +17,19 @@
             justify-content: center
             align-items: center
         &-img
-            margin-bottom: 53px
+            margin-bottom: 3.3125rem
         &-title
-            font-size: 25px
+            font-size: 1.5625rem
             margin: 0
-            margin-bottom: 30px
+            margin-bottom: 1.875rem
         &-txt
             margin: 0
-            max-width: 157px
+            max-width: 9.8125rem
             width: 100%
             text-align: center
 
 .swiper
-    // width: 315px
+    // width: 19.6875rem
     &-wrapper
     &-slide
         
@@ -43,14 +43,14 @@
 .swiper
     &-five
         background: url('../img/webp/prev.webp') center no-repeat
-        width: 52px
-        height: 16px
-        left: 590px
-        top: 150px
+        width: 3.25rem
+        height: 1rem
+        left: 36.875rem
+        top: 9.375rem
     &-six
         background: url('../img/webp/next.webp') center no-repeat
-        width: 52px
-        height: 16px
-        left: 1262px
-        top: 150px
+        width: 3.25rem
+        height: 1rem
+        left: 78.875rem
+        top: 9.375rem
     
