--- a/sass/templates/_questions.sass
+++ b/sass/templates/_questions.sass
@@ -2,35 +2,35 @@
     background: linear-gradient(0.0deg, #03256c -114%, #061826 215%)
     align-items: center
     text-align: center
-    padding-top: 128px
-    padding-bottom: 123px
+    padding-top: 8rem
+    padding-bottom: 7.6875rem
     &__headlight
         color: #fff
-        margin-bottom: 31px
+        margin-bottom: 1.9375rem
         font-weight: bold
     &__description
         color: #fff
-        max-width: 380px
+        max-width: 23.75rem
         width: 100%
         margin: auto
-        margin-bottom: 32px
+        margin-bottom: 2rem
     &__form__container
         display: flex
         justify-content: space-between
         align-items: flex-start
     &__input
-        max-width: 263px
+        max-width: 16.4375rem
         width: 100%
-        padding-top: 17px
-        padding-left: 17px
-        padding-bottom: 17px
+        padding-top: 1.0625rem
+        padding-left: 1.0625rem
+        padding-bottom: 1.0625rem
         outline: none
         border: none
-        border-radius: 5px
+        border-radius: 0.3125rem
         color: black
-        margin-bottom: 10px
+        margin-bottom: 0.625rem
         &-inside
-            max-width: 263px
+            max-width: 16.4375rem
             width: 100%
             
        
