--- a/sass/templates/_results.sass
+++ b/sass/templates/_results.sass
@@ -1,42 +1,42 @@
 .results
     background: url('../img/webp/resultwave.webp') no-repeat left bottom
     &__row
-        border-top: 1px solid #eaf1f7
-        padding-top: 124px
-        padding-bottom: 111px
+        border-top: 0.0625rem solid #eaf1f7
+        padding-top: 7.75rem
+        padding-bottom: 6.9375rem
         display: flex
         justify-content: space-between
     &__title
-        font-size: 36px
-        max-width: 270px
+        font-size: 2.25rem
+        max-width: 16.875rem
         width: 100%
-        margin-bottom: 29px
+        margin-bottom: 1.8125rem
         span
             font-weight: bold
     &__description
-        max-width: 260px
+        max-width: 16.25rem
         width: 100%
-        line-height: 20px
+        line-height: 1.25rem
     &__columns
     &__columns__examples
         display: flex
         justify-content: space-between
-        max-width: 648px
+        max-width: 40.5rem
         width: 100%
     &__example
-        max-width: 262px
+        max-width: 16.375rem
         width: 100%
         transition: .3s
         &:hover
             transform: scale(1.2)
         &__title
-            margin-top: 44px
-            margin-bottom: 31px
-            font-size: 23px
+            margin-top: 2.75rem
+            margin-bottom: 1.9375rem
+            font-size: 1.4375rem
         &__description
-            max-width: 253px
+            max-width: 15.8125rem
             width: 100%
-            line-height: 20px
+            line-height: 1.25rem
             &__thiner
-                max-width: 221px
+                max-width: 13.8125rem
                 width: 100%
