--- a/sass/templates/_reviews.sass
+++ b/sass/templates/_reviews.sass
@@ -5,11 +5,11 @@
         justify-content: center
         align-items: center
     &__title
-        margin-top: 47px
+        margin-top: 2.9375rem
         margin-bottom: 0
     &__video
-        margin-top: 64px
-        margin-bottom: 77px
+        margin-top: 4rem
+        margin-bottom: 4.8125rem
         background: url('../img/webp/review_wom.webp') center no-repeat
     &__swiper
         display: flex
@@ -17,12 +17,12 @@
         justify-content: center
         align-items: center
         &-title
-            font-size: 20px
+            font-size: 1.25rem
         &-txt
-            margin-top: 36px
-            margin-bottom: 116px
+            margin-top: 2.25rem
+            margin-bottom: 7.25rem
             text-align: center
-            max-width: 520px
+            max-width: 32.5rem
             width: 100%
-            font-size: 16px
+            font-size: 1rem
 
