--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -45,6 +45,9 @@
         &:last-child
             margin-bottom: 0
     &__link__logo
+        transition: .3s
+        &:hover
+            transform: scale(1.2)
         &__fb
             
             padding: 1.25rem 1.25rem
