--- a/css/style.css
+++ b/css/style.css
@@ -1366,7 +1366,7 @@ img {
 }
 
 .price {
-  margin-bottom: 7.5rem;
+  margin-bottom: 120px;
 }
 
 .price__div {
@@ -1386,16 +1386,16 @@ img {
 }
 
 .price__title {
-  font-size: 2.25rem;
-  margin-top: 2.8125rem;
-  margin-bottom: 1.8125rem;
+  font-size: 36px;
+  margin-top: 45px;
+  margin-bottom: 29px;
 }
 
 .price__txt {
-  max-width: 21.875rem;
+  max-width: 350px;
   text-align: center;
-  margin-bottom: 4.625rem;
-  line-height: 1.5rem;
+  margin-bottom: 74px;
+  line-height: 24px;
 }
 
 .price__col {
@@ -1422,9 +1422,9 @@ img {
 }
 
 .price__col-txt {
-  max-width: 13.5rem;
+  max-width: 216px;
   text-align: center;
-  margin-bottom: 1.8125rem;
+  margin-bottom: 29px;
 }
 
 .price__col-txt-last {
@@ -1432,25 +1432,25 @@ img {
 }
 
 .price__col-strong {
-  margin-top: 1.6875rem;
-  margin-bottom: 2.8125rem;
-  font-size: 1.5rem;
+  margin-top: 27px;
+  margin-bottom: 45px;
+  font-size: 24px;
 }
 
 .price__col-title {
-  font-size: 1.5rem;
+  font-size: 24px;
 }
 
 .b-one {
-  margin-top: 4.375rem;
+  margin-top: 70px;
 }
 
 .b-two {
-  margin-top: 6.1875rem;
+  margin-top: 99px;
 }
 
 .b-three {
-  margin-top: 3.1875rem;
+  margin-top: 51px;
 }
 
 .free-lessons {
@@ -1833,6 +1833,16 @@ img {
 
 .footer__link:last-child {
   margin-bottom: 0;
+}
+
+.footer__link__logo {
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.footer__link__logo:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .footer__link__logo__fb {
