--- a/sass/templates/_price.sass
+++ b/sass/templates/_price.sass
@@ -1,19 +1,19 @@
 .price
-    margin-bottom: 7.5rem
+    margin-bottom: 120px
     &__div
         display: flex
         flex-direction: column
         justify-content: center
         align-items: center
     &__title
-        font-size: 2.25rem 
-        margin-top: 2.8125rem
-        margin-bottom: 1.8125rem
+        font-size: 36px 
+        margin-top: 45px
+        margin-bottom: 29px
     &__txt
-        max-width: 21.875rem
+        max-width: 350px
         text-align: center
-        margin-bottom: 4.625rem
-        line-height: 1.5rem
+        margin-bottom: 74px
+        line-height: 24px
     &__col
         display: flex
         flex-direction: column
@@ -23,21 +23,21 @@
         &:hover
             transform: scale(1.2)
         &-txt
-            max-width: 13.5rem
+            max-width: 216px
             text-align: center
-            margin-bottom: 1.8125rem
+            margin-bottom: 29px
             &-last
                 margin: 0
         &-strong
-            margin-top: 1.6875rem
-            margin-bottom: 2.8125rem
-            font-size: 1.5rem
+            margin-top: 27px
+            margin-bottom: 45px
+            font-size: 24px
         &-title
-            font-size: 1.5rem
+            font-size: 24px
 .b
     &-one
-        margin-top: 4.375rem
+        margin-top: 70px
     &-two
-        margin-top: 6.1875rem
+        margin-top: 99px
     &-three
-        margin-top: 3.1875rem
+        margin-top: 51px
